prepare to deploy

--- a/config/database.yml
+++ b/config/database.yml
@@ -21,10 +21,13 @@ test:
   password:
 
 production:
+  encoding: utf8
+  template: template0
+  collate: en_US.UTF8
+  ctype: en_US.UTF8
   adapter: postgresql
   database: angelguardian
   pool: 5
   timeout: 5000
   host: localhost
   username: postgres
-  password: postgres
